--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
     <head>
         <meta charset="UTF-8">
         <title>Introduction</title>
+        <style>
+        div{background-color: #8f8c8c7a;}
+        @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@300&display=swap');
+        body{font-family: 'Noto Serif KR', serif;}
+        </style>
+ 
     </head>
 
     <body>
-        <h1 style="text-align:center; color:black; font-size:60px; border:5px solid plum;">Self-Introduction</h1>
-        <p></p>
+        <div style="height:300px; color:tomato; font-size:60px;">About me</div>
+        <div style="height:200px; font-size:100px; line-height: 200px; text-align: center"><b>SeoYoung Lee</b></div>
+        <img src="./image/증명사진.jpg" style="margin-left:500px; margin-top:70px; margin-right:20px; width:250px; height:250px; border:5px solid tomato; border-radius:80px;"/>
+        <img src="./image/이미지2.jpeg" style="margin-top:70px; width:250px; height:250px; border:5px solid tomato; border-radius:80px;"/>
+        <p>이름: 이서영</p>
 
     </body>
 </html>
