--- a/index.html
+++ b/index.html
@@ -3,19 +3,45 @@
         <meta charset="UTF-8">
         <title>Introduction</title>
         <style>
-        div{background-color: #8f8c8c7a;}
-        @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@300&display=swap');
-        body{font-family: 'Noto Serif KR', serif;}
+            div{background-color: #8f8c8c7a;}
+            @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@400&display=swap');
+            body{font-family: 'Noto Serif KR', serif;}
+            table{font-size:30px;}
         </style>
  
     </head>
 
     <body>
-        <div style="height:300px; color:tomato; font-size:60px;">About me</div>
-        <div style="height:200px; font-size:100px; line-height: 200px; text-align: center"><b>SeoYoung Lee</b></div>
-        <img src="./image/증명사진.jpg" style="margin-left:500px; margin-top:70px; margin-right:20px; width:250px; height:250px; border:5px solid tomato; border-radius:80px;"/>
-        <img src="./image/이미지2.jpeg" style="margin-top:70px; width:250px; height:250px; border:5px solid tomato; border-radius:80px;"/>
-        <p>이름: 이서영</p>
+        <div style="height:300px; color:tomato; font-size:60px;"> About me</div>
+        <div style="height:200px; font-size:70px; line-height: 150px; text-align: center"><b>Hello!&nbsp;I'm SeoYoung</b></div>
+        <img src="./image/증명사진.jpg" style="margin-left:520px; margin-top:70px; margin-right:20px; width:250px; height:250px; border:5px solid tomato; border-radius:90px;"/>
+        <img src="./image/이미지2.jpeg" style="margin-top:70px; width:250px; height:250px; border:5px solid tomato; border-radius:90px;"/>
+        <br/><br/><br/>
+        <table border="4" bordercolor="gray" width="700" height="300" align = "center">
+            <caption style="font-size:50px"><b>PROFILE</b></caption>
+            <tr>
+                <th>이름</th>
+                <th>이서영</th>
+            </tr>
+            <tr>
+                <th>생년월일</th>
+                <th>2000.04.25</th>    
+            </tr>
+            <tr>
+                <th>학교</th>
+                <th>단국대학교</th>
+            </tr>
+            <tr>
+                <th>학과</th>
+                <th>정보통계학과</th>
+            </tr>
+            <tr>
+                <th>이메일</th>
+                <th>soongjun3@naver.com</th>
+            </tr>
+        </table>
+        <h1>성격</h1>
+
 
     </body>
 </html>
