--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
             @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@400&display=swap');
             body{font-family: 'Noto Serif KR', serif;}
             table{font-size:30px;}
+            ul{width: 700px; margin-left:600; font-size:25px; line-height:50px;}
         </style>
  
     </head>
 
     <body>
         <div style="height:300px; color:tomato; font-size:60px;"> About me</div>
-        <div style="height:200px; font-size:70px; line-height: 150px; text-align: center"><b>Hello!&nbsp;I'm SeoYoung</b></div>
-        <img src="./image/증명사진.jpg" style="margin-left:520px; margin-top:70px; margin-right:20px; width:250px; height:250px; border:5px solid tomato; border-radius:90px;"/>
-        <img src="./image/이미지2.jpeg" style="margin-top:70px; width:250px; height:250px; border:5px solid tomato; border-radius:90px;"/>
+        <div style="height:200px; font-size:80px; line-height: 150px; text-align: center"><b>Hello!&nbsp;I'm SeoYoung</b></div>
+        <img src="./image/증명사진.jpg" style="margin-left:520px; margin-top:80px; margin-right:20px; width:250px; height:250px; border:5px solid tomato; border-radius:90px;"/>
+        <img src="./image/이미지2.jpeg" style="margin-top:80px; width:250px; height:250px; border:5px solid tomato; border-radius:90px;"/>
         <br/><br/><br/>
         <table border="4" bordercolor="gray" width="700" height="300" align = "center">
             <caption style="font-size:50px"><b>PROFILE</b></caption>
@@ -39,8 +40,21 @@
                 <th>이메일</th>
                 <th>soongjun3@naver.com</th>
             </tr>
-        </table>
-        <h1>성격</h1>
+        </table><br/><br/><br/>
+        <h1 style="background-color:#8f8c8c7a; border:3px solid tomato; font-size:70px; text-align: center; padding:10px;"><b>성격/특징</b></h1>
+        <img src="./image/good.png" style="border-radius:150px; margin-left:400px; width:150px; height:150px; border:3px solid black" align="left">
+        <ul>
+            <li>꼼꼼하다.</li>
+            <li>신중하다.</li>
+            <li>책임감이 강하다.</li>
+            <li>솔직하다.</li>
+        </ul><br><br><br><br>
+        <img src="./image/bad.png" style="border-radius:150px; margin-left:400px; width:150px; height:150px; border:3px solid black" align="left">
+        <ul>
+            <li>일을 수행할 때 시간이 오래 걸리는 편이다.</li>
+            <li>낯을 많이 가린다.</li>
+            <li>무뚝뚝하고 표현을 잘 못한다.</li>
+        </ul>
 
 
     </body>
