--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@400&display=swap');
             body{font-family: 'Noto Serif KR', serif;}
             table{font-size:30px;}
-            ul{width: 700px; margin-left:600; font-size:25px; line-height:50px;}
+            ul{width: 700px; margin-left:600; font-size:27px; line-height:50px;}
         </style>
  
     </head>
@@ -40,7 +40,7 @@
                 <th>이메일</th>
                 <th>soongjun3@naver.com</th>
             </tr>
-        </table><br/><br/><br/>
+        </table><br/><br/><br/><br><br><br><br>
         <h1 style="background-color:#8f8c8c7a; border:3px solid tomato; font-size:70px; text-align: center; padding:10px;"><b>성격/특징</b></h1>
         <img src="./image/good.png" style="border-radius:150px; margin-left:400px; width:150px; height:150px; border:3px solid black" align="left">
         <ul>
@@ -48,13 +48,29 @@
             <li>신중하다.</li>
             <li>책임감이 강하다.</li>
             <li>솔직하다.</li>
-        </ul><br><br><br><br>
+        </ul><br><br><br>
         <img src="./image/bad.png" style="border-radius:150px; margin-left:400px; width:150px; height:150px; border:3px solid black" align="left">
         <ul>
             <li>일을 수행할 때 시간이 오래 걸리는 편이다.</li>
             <li>낯을 많이 가린다.</li>
             <li>무뚝뚝하고 표현을 잘 못한다.</li>
-        </ul>
+        </ul><br><br>
+        <h1 style="font-size:40px; text-align: center;"><b>-재밌게 본 영화-</b></h1>
+        <table width="1000" align = "center">
+            <tr>
+                <th><a href="https://youtu.be/KxDbaP-k6i4"><img src="./image/movie1.jpg" style="border:3px solid tomato"></a></th>
+                <th><a href="https://youtu.be/LmS5KMJTWlA"><img src="./image/movie2.jpg" style="border:3px solid tomato"></a></th>
+                <th><a href="https://tv.naver.com/v/5685312"><img src="./image/movie3.jpg" style="border:3px solid tomato"></a></th>
+                <th><a href="https://tv.naver.com/v/5692263"><img src="./image/movie4.jpg" style="border:3px solid tomato"></a></th>
+            </tr>
+            <tr>
+                <th>해리포터</th>
+                <th>코코</th>
+                <th>클래식</th>
+                <th>타짜</th>
+            </tr>
+        </table>
+        <p style="font-size:17px; text-align: center;">*사진을 누르면 영화 예고편으로 이동합니다.</p>
 
 
     </body>
