--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
         <title>Introduction</title>
         <style>
             div{background-color: #8f8c8c7a;}
-            @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@400&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@500&display=swap');
             body{font-family: 'Noto Serif KR', serif;}
             table{font-size:30px;}
-            ul{width: 700px; margin-left:600; font-size:27px; line-height:50px;}
+            ul{width: 700px; margin-left:600; font-size:30px; line-height:50px;}
+            h1{background-color:#8f8c8c7a; border:5px solid tomato; border-style:dotted; font-size:70px; text-align: center; padding:10px;}
         </style>
  
     </head>
 
     <body>
-        <div style="height:300px; color:tomato; font-size:60px;"> About me</div>
-        <div style="height:200px; font-size:80px; line-height: 150px; text-align: center"><b>Hello!&nbsp;I'm SeoYoung</b></div>
-        <img src="./image/증명사진.jpg" style="margin-left:520px; margin-top:80px; margin-right:20px; width:250px; height:250px; border:5px solid tomato; border-radius:90px;"/>
-        <img src="./image/이미지2.jpeg" style="margin-top:80px; width:250px; height:250px; border:5px solid tomato; border-radius:90px;"/>
-        <br/><br/><br/>
+        <div style="height:200px; color:tomato; font-size:60px;">About me</div>
+        <div style="height:200px; font-size:80px; line-height: 280px; text-align: center"><b>Hello!&nbsp;I'm SeoYoung</b></div>
+        <img src="./image/증명사진.jpg" style="margin-left:450px; margin-top:90px; margin-right:30px; width:300px; height:300px; border:7px solid tomato; border-radius:100px;"/>
+        <img src="./image/이미지2.jpeg" style="margin-top:90px; width:300px; height:300px; border:7px solid tomato; border-radius:100px;"/>
+        <br/><br/><br/><br/><br/><br/>
         <table border="4" bordercolor="gray" width="700" height="300" align = "center">
             <caption style="font-size:50px"><b>PROFILE</b></caption>
             <tr>
@@ -40,8 +41,8 @@
                 <th>이메일</th>
                 <th>soongjun3@naver.com</th>
             </tr>
-        </table><br/><br/><br/><br><br><br><br>
-        <h1 style="background-color:#8f8c8c7a; border:3px solid tomato; font-size:70px; text-align: center; padding:10px;"><b>성격/특징</b></h1>
+        </table><br/><br/><br/><br/><br/><br/><br/><br/>
+        <h1><b>성격 / 특징</b></h1>
         <img src="./image/good.png" style="border-radius:150px; margin-left:400px; width:150px; height:150px; border:3px solid black" align="left">
         <ul>
             <li>꼼꼼하다.</li>
@@ -55,13 +56,20 @@
             <li>낯을 많이 가린다.</li>
             <li>무뚝뚝하고 표현을 잘 못한다.</li>
         </ul><br><br>
-        <h1 style="font-size:40px; text-align: center;"><b>-재밌게 본 영화-</b></h1>
+        <h1><b>취미</b></h1><br><br>
+        <h2 style="text-align: center; font-size:40px"><i>"영화, 음악감상"</i></h2>
+        <p style="text-align: center; font-size:20px">엄청난 집순이인 저는 집에서 보내는 많은데요, 주로 재밌는 영화를 보거나 노래를 들으면서 시간을 보냅니다!</p><br><br><br>
+        <h2 style="text-align: center; font-size:40px"><i>"혼자 여행하기"</i></h2>
+        <p style="text-align: center; font-size:20px">여럿이 가는 여행도 좋지만 혼자하는 여행은 누군가에게 맞출 필요없이 내가 가고 싶을 때 가고, 쉬고 싶을 때 쉴 수 있고<br> 
+        여러가지 생각으로 차있던 머릿속을 비우고, 나와 여행에만 집중할 수 있기 때문에 좋아합니다.</p><br><br><br><br>
+
+        <h2 style="font-size:40px; text-align: center;"><b>-재밌게 본 영화-</b></h2>
         <table width="1000" align = "center">
             <tr>
-                <th><a href="https://youtu.be/KxDbaP-k6i4"><img src="./image/movie1.jpg" style="border:3px solid tomato"></a></th>
-                <th><a href="https://youtu.be/LmS5KMJTWlA"><img src="./image/movie2.jpg" style="border:3px solid tomato"></a></th>
-                <th><a href="https://tv.naver.com/v/5685312"><img src="./image/movie3.jpg" style="border:3px solid tomato"></a></th>
-                <th><a href="https://tv.naver.com/v/5692263"><img src="./image/movie4.jpg" style="border:3px solid tomato"></a></th>
+                <th><a href="https://youtu.be/KxDbaP-k6i4"><img src="./image/movie1.jpg" style="border:6px solid tomato"></a></th>
+                <th><a href="https://youtu.be/LmS5KMJTWlA"><img src="./image/movie2.jpg" style="border:6px solid tomato"></a></th>
+                <th><a href="https://tv.naver.com/v/5685312"><img src="./image/movie3.jpg" style="border:6px solid tomato"></a></th>
+                <th><a href="https://tv.naver.com/v/5692263"><img src="./image/movie4.jpg" style="border:6px solid tomato"></a></th>
             </tr>
             <tr>
                 <th>해리포터</th>
@@ -71,6 +79,7 @@
             </tr>
         </table>
         <p style="font-size:17px; text-align: center;">*사진을 누르면 영화 예고편으로 이동합니다.</p>
+
 
 
     </body>
