--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             body{font-family: 'Noto Serif KR', serif;}
             table{font-size:30px;}
             ul{width: 700px; margin-left:600; font-size:30px; line-height:50px;}
-            h1{background-color:#8f8c8c7a; border:5px solid tomato; border-style:dotted; font-size:70px; text-align: center; padding:10px;}
+            h1{background-color:#8f8c8c7a; border:5px solid tomato; border-style:dotted; font-size:80px; text-align: center; padding:10px;}
         </style>
  
     </head>
@@ -42,28 +42,28 @@
                 <th>soongjun3@naver.com</th>
             </tr>
         </table><br/><br/><br/><br/><br/><br/><br/><br/>
-        <h1><b>성격 / 특징</b></h1>
+        <h1><b>성격 / 특징</b></h1><br><br>
         <img src="./image/good.png" style="border-radius:150px; margin-left:400px; width:150px; height:150px; border:3px solid black" align="left">
         <ul>
-            <li>꼼꼼하다.</li>
-            <li>신중하다.</li>
-            <li>책임감이 강하다.</li>
-            <li>솔직하다.</li>
+            <li>꼼꼼합니다.</li>
+            <li>신중합니다.</li>
+            <li>책임감이 강합니다.</li>
+            <li>솔직합니다.</li>
         </ul><br><br><br>
         <img src="./image/bad.png" style="border-radius:150px; margin-left:400px; width:150px; height:150px; border:3px solid black" align="left">
         <ul>
-            <li>일을 수행할 때 시간이 오래 걸리는 편이다.</li>
-            <li>낯을 많이 가린다.</li>
-            <li>무뚝뚝하고 표현을 잘 못한다.</li>
+            <li>일을 수행할 때 시간이 오래 걸리는 편입니다.</li>
+            <li>낯을 많이 가립니다.</li>
+            <li>무뚝뚝하고 표현을 잘 못합니다.</li>
         </ul><br><br>
         <h1><b>취미</b></h1><br><br>
-        <h2 style="text-align: center; font-size:40px"><i>"영화, 음악감상"</i></h2>
+        <h2 style="text-align: center; font-size:50px"><i>"영화, 음악감상"</i></h2>
         <p style="text-align: center; font-size:20px">엄청난 집순이인 저는 집에서 보내는 많은데요, 주로 재밌는 영화를 보거나 노래를 들으면서 시간을 보냅니다!</p><br><br><br>
-        <h2 style="text-align: center; font-size:40px"><i>"혼자 여행하기"</i></h2>
+        <h2 style="text-align: center; font-size:50px"><i>"혼자 여행하기"</i></h2>
         <p style="text-align: center; font-size:20px">여럿이 가는 여행도 좋지만 혼자하는 여행은 누군가에게 맞출 필요없이 내가 가고 싶을 때 가고, 쉬고 싶을 때 쉴 수 있고<br> 
-        여러가지 생각으로 차있던 머릿속을 비우고, 나와 여행에만 집중할 수 있기 때문에 좋아합니다.</p><br><br><br><br>
+        여러가지 생각으로 차있던 머릿속을 비우고, 나와 여행에만 집중할 수 있기 때문에 좋아합니다.</p><br><br><br><br><br><br>
 
-        <h2 style="font-size:40px; text-align: center;"><b>-재밌게 본 영화-</b></h2>
+        <h2 style="font-size:40px; text-align: center;"><b>-<ins>재밌게 본 영화</ins>-</b></h2>
         <table width="1000" align = "center">
             <tr>
                 <th><a href="https://youtu.be/KxDbaP-k6i4"><img src="./image/movie1.jpg" style="border:6px solid tomato"></a></th>
@@ -78,7 +78,22 @@
                 <th>타짜</th>
             </tr>
         </table>
-        <p style="font-size:17px; text-align: center;">*사진을 누르면 영화 예고편으로 이동합니다.</p>
+        <p style="font-size:17px; text-align: center;">*사진을 누르면 영화 예고편으로 이동합니다.</p><br><br>
+        <h2 style="font-size:40px; text-align: center;"><b>-<ins>요즘 듣는 노래</ins>-</b></h2>
+        <table width="800" align = "center">
+            <tr>
+                <th><a href="https://youtu.be/Y8JFxS1HlDo"><img src="./image/music1.jpeg" style="border:6px solid tomato"></a></th>
+                <th><a href="https://youtu.be/SK6Sm2Ki9tI"><img src="./image/music2.jpeg" style="border:6px solid tomato"></a></th>
+                <th><a href="https://youtu.be/boUl0jPZMdg"><img src="./image/music3.jpg" style="border:6px solid tomato; width:170px; height:170px;"></a></th>
+            </tr>
+            <tr style="font-size: 25px">
+                <th>LOVE DIVE<br>- 아이브</th>
+                <th>신호등<br> - 이무진</th>
+                <th>i'm so tired...<br> - Lauv, Troye Sivan </th>
+            </tr>
+        </table>
+        <p style="font-size:17px; text-align: center;">*사진을 누르면 뮤직비디오로 이동합니다.</p><br><br>
+
 
 
 
