--- a/index.html
+++ b/index.html
@@ -1,21 +1,33 @@
 <html>
+    <style>
+        html{scroll-behavior: smooth}
+    </style>
     <head>
         <meta charset="UTF-8">
         <title>Introduction</title>
         <style>
+            div#header{background-color:tomato;;position:fixed;width:100%;height:30px; top:0;left:0;text-align:center;line-height:30px}
+            div a{font-size:20px;color:rgb(0, 0, 0);padding:15px;text-decoration:none;}
+
             div{background-color: #8f8c8c7a;}
             @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@500&display=swap');
-            body{font-family: 'Noto Serif KR', serif;}
+            body{font-family: 'Noto Serif KR', serif;background-color: white;margin:0;padding:0;}
             table{font-size:30px;}
             ul{width: 700px; margin-left:600; font-size:30px; line-height:50px;}
-            h1{background-color:#8f8c8c7a; border:5px solid tomato; border-style:dotted; font-size:80px; text-align: center; padding:10px;}
+            h1{background-color:#8f8c8c7a; border:5px solid tomato; border-style:dotted; font-size:80px; text-align: center; padding:3px;}
         </style>
  
     </head>
 
     <body>
+        <div id="header">
+            <a href="#0">프로필</a>
+            <a href="#1">성격/특징</a>
+            <a href="#2">취미</a>
+            <a href="#3">앞으로 하고 싶은 것</a>
+        </div>
         <div style="height:200px; color:tomato; font-size:60px;">About me</div>
-        <div style="height:200px; font-size:80px; line-height: 280px; text-align: center"><b>Hello!&nbsp;I'm SeoYoung</b></div>
+        <div style="height:200px; font-size:80px; line-height: 280px; text-align: center"><b>Hello, I'm SeoYoung!</b></div>
         <img src="./image/증명사진.jpg" style="margin-left:450px; margin-top:90px; margin-right:30px; width:300px; height:300px; border:7px solid tomato; border-radius:100px;"/>
         <img src="./image/이미지2.jpeg" style="margin-top:90px; width:300px; height:300px; border:7px solid tomato; border-radius:100px;"/>
         <br/><br/><br/><br/><br/><br/>
@@ -42,7 +54,7 @@
                 <th>soongjun3@naver.com</th>
             </tr>
         </table><br/><br/><br/><br/><br/><br/><br/><br/>
-        <h1><b>성격 / 특징</b></h1><br><br>
+        <h1 id="1"><b>성격 / 특징</b></h1><br><br>
         <img src="./image/good.png" style="border-radius:150px; margin-left:400px; width:150px; height:150px; border:3px solid black" align="left">
         <ul>
             <li>꼼꼼합니다.</li>
@@ -58,7 +70,7 @@
         </ul><br><br>
         <h1><b>취미</b></h1><br><br>
         <h2 style="text-align: center; font-size:50px"><i>"영화, 음악감상"</i></h2>
-        <p style="text-align: center; font-size:20px">엄청난 집순이인 저는 집에서 보내는 많은데요, 주로 재밌는 영화를 보거나 노래를 들으면서 시간을 보냅니다!</p><br><br><br>
+        <p style="text-align: center; font-size:20px">엄청난 집순이인 저는 집에서 보내는 많은데요, 주로 재밌는 영화를 보거나 노래를 들으면서 시간을 보냅니다!</p><br><br><br><br><br>
         <h2 style="text-align: center; font-size:50px"><i>"혼자 여행하기"</i></h2>
         <p style="text-align: center; font-size:20px">여럿이 가는 여행도 좋지만 혼자하는 여행은 누군가에게 맞출 필요없이 내가 가고 싶을 때 가고, 쉬고 싶을 때 쉴 수 있고<br> 
         여러가지 생각으로 차있던 머릿속을 비우고, 나와 여행에만 집중할 수 있기 때문에 좋아합니다.</p><br><br><br><br><br><br>
@@ -92,7 +104,14 @@
                 <th>i'm so tired...<br> - Lauv, Troye Sivan </th>
             </tr>
         </table>
-        <p style="font-size:17px; text-align: center;">*사진을 누르면 뮤직비디오로 이동합니다.</p><br><br>
+        <p style="font-size:17px; text-align: center;">*사진을 누르면 뮤직비디오로 이동합니다.</p><br><br><br><br>
+        <h1><b>앞으로 하고 싶은 것</b></h1><br><br>
+        <ul style="line-height:60px">
+            <li>코딩공부</li>
+            <li>혼자 해외여행</li>
+            <li>국토대장정</li>
+            <li>새로운 취미 만들기</li>
+        </ul><br><br><br>
 
 
 
