--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <head>
         <meta charset="UTF-8">
         <title>Introduction</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Hahmlet:wght@300&display=swap" rel="stylesheet">
         <style>
-            div#header{background-color:tomato;;position:fixed;width:100%;height:30px; top:0;left:0;text-align:center;line-height:30px}
+            div#header{background-color:rgba(255, 99, 71, 0.678);;position:fixed;width:100%;height:30px; top:0;left:0;text-align:center;line-height:30px}
             div a{font-size:20px;color:rgb(0, 0, 0);padding:15px;text-decoration:none;}
 
             div{background-color: #8f8c8c7a;}
-            @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@500&display=swap');
-            body{font-family: 'Noto Serif KR', serif;background-color: white;margin:0;padding:0;}
+            body{font-family: 'Hahmlet', serif;background-color:rgba(236, 236, 236, 0.822)  ;margin:0;padding:0;}
             table{font-size:30px;}
             ul{width: 700px; margin-left:600; font-size:30px; line-height:50px;}
             h1{background-color:#8f8c8c7a; border:5px solid tomato; border-style:dotted; font-size:80px; text-align: center; padding:3px;}
@@ -20,17 +22,17 @@
     </head>
 
     <body>
-        <div id="header">
+        <div id="header"><b>
             <a href="#0">프로필</a>
             <a href="#1">성격/특징</a>
             <a href="#2">취미</a>
-            <a href="#3">앞으로 하고 싶은 것</a>
+            <a href="#3">앞으로 하고 싶은 것</a></b>
         </div>
         <div style="height:200px; color:tomato; font-size:60px;">About me</div>
-        <div style="height:200px; font-size:80px; line-height: 280px; text-align: center"><b>Hello, I'm SeoYoung!</b></div>
-        <img src="./image/증명사진.jpg" style="margin-left:450px; margin-top:90px; margin-right:30px; width:300px; height:300px; border:7px solid tomato; border-radius:100px;"/>
+        <div style="height:200px; font-size:80px; line-height: 280px; text-align: center"><b>Hello, I'm SeoYoung!</b></div>    
+        <img id="0" src="./image/증명사진.jpg" style="margin-left:450px; margin-top:90px; margin-right:30px; width:300px; height:300px; border:7px solid tomato; border-radius:100px;"/>
         <img src="./image/이미지2.jpeg" style="margin-top:90px; width:300px; height:300px; border:7px solid tomato; border-radius:100px;"/>
-        <br/><br/><br/><br/><br/><br/>
+        <br/><br/><br/><br/><br/>
         <table border="4" bordercolor="gray" width="700" height="300" align = "center">
             <caption style="font-size:50px"><b>PROFILE</b></caption>
             <tr>
@@ -53,7 +55,7 @@
                 <th>이메일</th>
                 <th>soongjun3@naver.com</th>
             </tr>
-        </table><br/><br/><br/><br/><br/><br/><br/><br/>
+        </table><br><br><br><br><br><br><br><br>
         <h1 id="1"><b>성격 / 특징</b></h1><br><br>
         <img src="./image/good.png" style="border-radius:150px; margin-left:400px; width:150px; height:150px; border:3px solid black" align="left">
         <ul>
@@ -68,9 +70,11 @@
             <li>낯을 많이 가립니다.</li>
             <li>무뚝뚝하고 표현을 잘 못합니다.</li>
         </ul><br><br>
-        <h1><b>취미</b></h1><br><br>
+        <h1 id="2"><b>취미</b></h1><br>
         <h2 style="text-align: center; font-size:50px"><i>"영화, 음악감상"</i></h2>
-        <p style="text-align: center; font-size:20px">엄청난 집순이인 저는 집에서 보내는 많은데요, 주로 재밌는 영화를 보거나 노래를 들으면서 시간을 보냅니다!</p><br><br><br><br><br>
+        <p style="text-align: center; font-size:20px">엄청난 집순이인 저는 집에서 보내는 많은데요, 주로 재밌는 영화를 보거나 노래를 들으면서 시간을 보냅니다!</p><br><br><br><br>
+        <a href="#2">영화추천</a>
+        <a href="#2">취미</a>
         <h2 style="text-align: center; font-size:50px"><i>"혼자 여행하기"</i></h2>
         <p style="text-align: center; font-size:20px">여럿이 가는 여행도 좋지만 혼자하는 여행은 누군가에게 맞출 필요없이 내가 가고 싶을 때 가고, 쉬고 싶을 때 쉴 수 있고<br> 
         여러가지 생각으로 차있던 머릿속을 비우고, 나와 여행에만 집중할 수 있기 때문에 좋아합니다.</p><br><br><br><br><br><br>
@@ -105,7 +109,7 @@
             </tr>
         </table>
         <p style="font-size:17px; text-align: center;">*사진을 누르면 뮤직비디오로 이동합니다.</p><br><br><br><br>
-        <h1><b>앞으로 하고 싶은 것</b></h1><br><br>
+        <br id="3"><h1><b>앞으로 하고 싶은 것</b></h1><br><br>
         <ul style="line-height:60px">
             <li>코딩공부</li>
             <li>혼자 해외여행</li>
