--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
         <link href="https://fonts.googleapis.com/css2?family=Hahmlet:wght@300&display=swap" rel="stylesheet">
         <style>
             div#header{background-color:rgba(255, 99, 71, 0.678);;position:fixed;width:100%;height:30px; top:0;left:0;text-align:center;line-height:30px}
-            div a{font-size:20px;color:rgb(0, 0, 0);padding:20px;text-decoration:none;}
+            div a{font-size:20px;color:rgb(65, 64, 64);padding:20px;text-decoration:none;}
 
             div#top{background-color: #8f8c8c7a; height:200px;}
             body{font-family: 'Hahmlet', serif;background-color:white;margin:0;padding:0;}
             table{font-size:30px;}
             ul{width: 700px; margin-left:600; font-size:30px; line-height:50px;}
-            h1{background-color:#8f8c8c7a; border:5px solid tomato; border-style:dotted; font-size:80px; text-align: center; padding:3px;}
+            h1{background-color:#8f8c8c7a; border:7px solid tomato; border-style:dashed; font-size:80px; text-align: center; padding:3px;}
         </style>
  
     </head>
@@ -84,10 +84,10 @@
         <br id="4"><br><br><br><h2 style="font-size:40px; text-align: center;"><b>-<ins>재밌게 본 영화</ins>-</b></h2>
         <table width="1000" align = "center">
             <tr>
-                <th><a href="https://youtu.be/KxDbaP-k6i4"><img src="./image/movie1.jpg" style="border:6px solid tomato"></a></th>
-                <th><a href="https://youtu.be/LmS5KMJTWlA"><img src="./image/movie2.jpg" style="border:6px solid tomato"></a></th>
-                <th><a href="https://tv.naver.com/v/5685312"><img src="./image/movie3.jpg" style="border:6px solid tomato"></a></th>
-                <th><a href="https://tv.naver.com/v/5692263"><img src="./image/movie4.jpg" style="border:6px solid tomato"></a></th>
+                <th><a href="https://youtu.be/KxDbaP-k6i4"><img src="./image/movie1.jpg" style="border:4px solid tomato"></a></th>
+                <th><a href="https://youtu.be/LmS5KMJTWlA"><img src="./image/movie2.jpg" style="border:4px solid tomato"></a></th>
+                <th><a href="https://tv.naver.com/v/5685312"><img src="./image/movie3.jpg" style="border:4px solid tomato"></a></th>
+                <th><a href="https://tv.naver.com/v/5692263"><img src="./image/movie4.jpg" style="border:4px solid tomato"></a></th>
             </tr>
             <tr>
                 <th>해리포터</th>
@@ -96,13 +96,13 @@
                 <th>타짜</th>
             </tr>
         </table>
-        <p style="font-size:18px; text-align: center;">*사진을 누르면 영화 예고편으로 이동합니다.</p><br><br>
+        <p style="font-size:20px; text-align: center;">*사진을 누르면 영화 예고편으로 이동합니다.</p><br><br>
         <br id="5"><br><br><br><br><h2 style="font-size:40px; text-align: center;"><b>-<ins>요즘 듣는 노래</ins>-</b></h2>
-        <table width="800" align = "center">
+        <table width="900" align = "center">
             <tr>
-                <th><a href="https://youtu.be/Y8JFxS1HlDo"><img src="./image/music1.jpeg" style="border:6px solid tomato"></a></th>
-                <th><a href="https://youtu.be/SK6Sm2Ki9tI"><img src="./image/music2.jpeg" style="border:6px solid tomato"></a></th>
-                <th><a href="https://youtu.be/boUl0jPZMdg"><img src="./image/music3.jpg" style="border:6px solid tomato; width:170px; height:170px;"></a></th>
+                <th><a href="https://youtu.be/Y8JFxS1HlDo"><img src="./image/music1.jpeg" style="border:4px solid tomato; width:230px; height:230px"></a></th>
+                <th><a href="https://youtu.be/SK6Sm2Ki9tI"><img src="./image/music2.jpeg" style="border:4px solid tomato; width:230px; height:230px"></a></th>
+                <th><a href="https://youtu.be/boUl0jPZMdg"><img src="./image/music3.jpg" style="border:4px solid tomato; width:230px; height:230px;"></a></th>
             </tr>
             <tr style="font-size: 25px">
                 <th>LOVE DIVE<br>- 아이브</th>
@@ -110,7 +110,7 @@
                 <th>i'm so tired...<br> - Lauv, Troye Sivan </th>
             </tr>
         </table>
-        <p style="font-size:18px; text-align: center;">*사진을 누르면 뮤직비디오로 이동합니다.</p><br><br><br><br><br><br><br><br>
+        <p style="font-size:20px; text-align: center;">*사진을 누르면 뮤직비디오로 이동합니다.</p><br><br><br><br><br><br><br><br>
         <h1 id="3"><b>앞으로 하고 싶은 것</b></h1>
         <table width="900" align = "center">
             <tr>
@@ -131,10 +131,7 @@
                 <th>국토대장정</th>
                 <th>새로운 취미 만들기</th>
             </tr>
-        </table><br><br><br>
-
-
-
-
+        </table><br><br><br><br><br>
+        <div style="background-color: rgba(255, 99, 71, 0.753); height:40px; text-align:center; font-size:20px;line-height: 40px">🌼 SEO-YOUNG 🌼</div>
     </body>
 </html>
