--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             div#top::before{content:"";background-image: url(./image/head.jpg); height:450px; width:100%;background-size:cover;position: absolute;opacity: 0.6;}
             div#top p{position: relative;}
             body{font-family: 'Hahmlet', serif;margin:0;padding:0;}
-            table{font-size:30px;}
-            ul{width: 700px; margin-left:600; font-size:30px; line-height:50px;}
-            h1{border:8px solid tomato; font-size:80px; text-align: center; padding:3px;}
+            table{font-size:32px;}
+            ul{width: 700px; margin-left:650; font-size:35px; line-height:60px;}
+            h1{border:8px solid tomato; font-size:85px; text-align: center;}
         </style>
  
     </head>
@@ -31,7 +31,7 @@
         </div>
         <div id="top"><p style="color:tomato; font-size:60px;;">About me</p>
         <p style="font-size:80px; line-height: 400px; text-align: center"><b>Hello, I'm SeoYoung!</b></p></div>  
-        <img id="0" src="./image/증명사진.jpg" style="margin-left:450px; margin-top:90px; margin-right:30px; width:300px; height:300px; border:7px solid tomato; border-radius:100px;"/>
+        <img id="0" src="./image/증명사진.jpg" style="margin-left:470px; margin-top:90px; margin-right:30px; width:300px; height:300px; border:7px solid tomato; border-radius:100px;"/>
         <img src="./image/이미지2.jpeg" style="margin-top:90px; width:300px; height:300px; border:7px solid tomato; border-radius:100px;"/>
         <br/><br/><br/><br/><br/>
         <table border="4" bordercolor="gray" width="700" height="300" align = "center">
@@ -58,20 +58,20 @@
             </tr>
         </table><br><br><br><br><br><br><br><br>
         <div style="background-color:#e6f4fd;z-index:-2">
-        <h1 id="1"><b>성격 / 특징</b></h1><br><br>
-        <img src="./image/good.png" style="border-radius:150px; margin-left:400px; width:150px; height:150px; border:3px solid black" align="left">
-        <ul><b>
+        <h1 id="1"><b>성격 / 특징</b></h1>
+        <img src="./image/good.png" style="border-radius:150px; margin-left:400px; margin-top:50px; width:170px; height:170px; border:3px solid black" align="left">
+        <ul>
             <li>꼼꼼합니다.</li>
             <li>신중합니다.</li>
             <li>책임감이 강합니다.</li>
-            <li>솔직합니다.</li></b>
-        </ul><br><br><br>
-        <img src="./image/bad.png" style="border-radius:150px; margin-left:400px; width:150px; height:150px; border:3px solid black" align="left">
-        <ul><b>
+            <li>솔직합니다.</li>
+        </ul><br><br>
+        <img src="./image/bad.png" style="border-radius:150px; margin-left:400px; margin-top:50px; width:170px; height:170px; border:3px solid black" align="left">
+        <ul>
             <li>일을 수행할 때 시간이 오래 걸리는 편입니다.</li>
             <li>낯을 많이 가립니다.</li>
-            <li>무뚝뚝하고 표현을 잘 못합니다.</li></b>
-        </ul><br><br></div>
+            <li>무뚝뚝하고 표현을 잘 못합니다.</li>
+        </ul><br><br><br></div>
         <div style="background-color:#e4e2e2;z-index:-2">
         <h1 id="2"><b>취미</b></h1>
         <h2 style="text-align: center; font-size:50px"><i>"영화, 음악감상"</i></h2>
